# libahp-hub

./: CITATION.cff  CMakeLists.txt  Doxyfile.cmake  README.md  ahp_hub.c  ahp_hub.h.cmake  rs232.c
cmake_modules/: FindUSB.cmake
debian/: changelog  control  copyright  libahp_hub.install
libserialport/: serialport.c
