cmake_minimum_required(VERSION 2.6)

project(ahp_hub C CXX)

LIST(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake_modules/")
include(GNUInstallDirs)

find_package(M REQUIRED)


set(LIB_INSTALL_DIR "${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_LIBDIR}")
set(AHP_HUB_VERSION_MAJOR 1)
set(AHP_HUB_VERSION_MINOR 5)
set(AHP_HUB_VERSION_RELEASE 3)
set(AHPHUB_VERSION "${AHP_HUB_VERSION_MAJOR}.${AHP_HUB_VERSION_MINOR}.${AHP_HUB_VERSION_RELEASE}")
set(AHP_HUB_VERSION 0x${AHP_HUB_VERSION_MAJOR}${AHP_HUB_VERSION_MINOR}${AHP_HUB_VERSION_RELEASE})
set(AHPHUB_SOVERSION ${AHP_HUB_VERSION_MAJOR})

set(SOURCES
    ${CMAKE_SOURCE_DIR}/rs232.c
    ${CMAKE_SOURCE_DIR}/ahp_hub.c
   )

configure_file(${CMAKE_CURRENT_SOURCE_DIR}/ahp_hub.h.cmake ${CMAKE_CURRENT_BINARY_DIR}/ahp_hub.h )
configure_file(${CMAKE_CURRENT_SOURCE_DIR}/Doxyfile.cmake ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile )

include_directories(${CMAKE_CURRENT_BINARY_DIR})
include_directories(${CMAKE_INCLUDE_PATH})
link_directories(${CMAKE_LIBRARY_PATH})
execute_process (COMMAND doxygen ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})

add_library(ahp_hub SHARED ${SOURCES})
set_target_properties(ahp_hub PROPERTIES VERSION ${AHPHUB_VERSION} SOVERSION ${AHPHUB_SOVERSION})

target_link_libraries(ahp_hub ${M_LIB})

install(TARGETS ahp_hub LIBRARY DESTINATION ${LIB_INSTALL_DIR})
install(FILES ${CMAKE_CURRENT_BINARY_DIR}/ahp_hub.h DESTINATION ${CMAKE_INSTALL_PREFIX}/include/ahp)
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/FindAHPHUB.cmake DESTINATION "${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_DATADIR}/cmake-${CMAKE_MAJOR_VERSION}.${CMAKE_MINOR_VERSION}/Modules")
