cmake_minimum_required(VERSION 2.6)

project(ahp_hub C CXX)

list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake_modules/")

include(GNUInstallDirs)

find_package(M REQUIRED)
find_package(Threads REQUIRED)
find_package(URJTAG REQUIRED)

set(LIB_INSTALL_DIR "${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_LIBDIR}")
set(AHP_HUB_VERSION_MAJOR 1)
set(AHP_HUB_VERSION_MINOR 2)
set(AHP_HUB_VERSION_RELEASE 9)
set(AHPHUB_VERSION "${AHP_HUB_VERSION_MAJOR}.${AHP_HUB_VERSION_MINOR}.${AHP_HUB_VERSION_RELEASE}")
set(AHP_HUB_VERSION 0x${AHP_HUB_VERSION_MAJOR}${AHP_HUB_VERSION_MINOR}${AHP_HUB_VERSION_RELEASE})
set(AHPHUB_SOVERSION ${AHP_HUB_VERSION_MAJOR})

set(SOURCES
    ${CMAKE_CURRENT_SOURCE_DIR}/ahp_hub.c
    ${CMAKE_CURRENT_SOURCE_DIR}/rs232.c
   )

configure_file(${CMAKE_CURRENT_SOURCE_DIR}/ahp_hub.h.cmake ${CMAKE_CURRENT_BINARY_DIR}/ahp_hub.h )
configure_file(${CMAKE_CURRENT_SOURCE_DIR}/Doxyfile.cmake ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile )

include_directories(${CMAKE_CURRENT_BINARY_DIR})
include_directories(${CMAKE_INCLUDE_PATH})
include_directories( ${URJTAG_INCLUDE_DIR})
link_directories(${CMAKE_LIBRARY_PATH})

execute_process (COMMAND doxygen ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})

add_library(ahp_hub SHARED ${SOURCES} ${PLATFORM_SOURCES})

if(WIN32)
    target_link_libraries(ahp_hub ws2_32 setupapi cfgmgr32)
else(WIN32)
   set_target_properties(ahp_hub PROPERTIES VERSION ${AHPHUB_VERSION} SOVERSION ${AHPHUB_SOVERSION})
endif(WIN32)

target_link_libraries(ahp_hub ${CMAKE_THREAD_LIBS_INIT} ${M_LIB})

install(TARGETS ahp_hub LIBRARY DESTINATION ${LIB_INSTALL_DIR})
install(FILES ${CMAKE_CURRENT_BINARY_DIR}/ahp_hub.h DESTINATION ${CMAKE_INSTALL_PREFIX}/include/ahp)
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/FindAHPHUB.cmake DESTINATION "${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_DATADIR}/cmake-${CMAKE_MAJOR_VERSION}.${CMAKE_MINOR_VERSION}/Modules")
